--- a/text-decoration/TextDecoration.html
+++ b/text-decoration/TextDecoration.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Jonathan Pope software app designer Boise Idaho" />
         <meta name="keywords" content="client-side server-side software developer programmer" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="css/styles.css" rel="stylesheet">
+        <link href="CSS/styles.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
