--- a/portfolioExperiance/index.html
+++ b/portfolioExperiance/index.html
@@ -15,12 +15,14 @@
 
     <body>
         <h1>Jonathan Pope</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="experiance.html">Experiance</a>
-            <a href="contact.html">Contact</a>
-          </nav>
+            <nav>
+                <ol>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="experiance.html">Experiance</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ol>
+            </nav>
 
         
         <main>
