--- a/portfolioExperiance/about.html
+++ b/portfolioExperiance/about.html
@@ -15,12 +15,14 @@
 
     <body>
         <!---->
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="experiance.html">Experiance</a>
-            <a href="contact.html">Contact</a>
-          </nav>
+            <nav>
+                <ol>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="experiance.html">Experiance</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ol>
+            </nav>
 
     </body>
 </html>
